@@ -14,7 +14,7 @@ myTimeGrid = ot.RegularGrid(tMin, timeStep, size)
 # We fix the parameter of the Cauchy model
 amplitude = [5]
 scale = [3]
-model = ot.ExponentialCauchy(amplitude, scale)
+model = ot.ExponentialCauchy(scale, amplitude)
 myNormalProcess = ot.SpectralNormalProcess(model, myTimeGrid)
 
 # Get a time series or a sample of time series
