@@ -57,7 +57,7 @@ Create a *SpectralNormalProcess* from a spectral model and a time grid:
 >>> spatialCorrelation = ot.CorrelationMatrix(2)
 >>> spatialCorrelation[0,1] = 0.8
 >>> myTimeGrid =  ot.RegularGrid(0.0, 0.1, 20)
->>> mySpectralModel = ot.CauchyModel(amplitude, scale, spatialCorrelation)
+>>> mySpectralModel = ot.CauchyModel(scale, amplitude, spatialCorrelation)
 >>> mySpectNormProc1 = ot.SpectralNormalProcess(mySpectralModel, myTimeGrid)
 
 Create a *SpectralNormalProcess* from a second order model and a time grid:
@@ -66,7 +66,7 @@ Create a *SpectralNormalProcess* from a second order model and a time grid:
 >>> amplitude = [1.0]
 >>> scale = [4.0, 5.0]
 >>> myTimeGrid =  ot.RegularGrid(0.0, 0.1, 20)
->>> mySecondOrderModel = ot.ExponentialCauchy(amplitude, scale)
+>>> mySecondOrderModel = ot.ExponentialCauchy(scale, amplitude)
 >>> mySpectNormProc2 = ot.SpectralNormalProcess(mySecondOrderModel, myTimeGrid)
 "
 // ---------------------------------------------------------------------
