@@ -41,7 +41,7 @@ Create a time series from a stationary second order process:
 
 >>> import openturns as ot
 >>> myTimeGrid = ot.RegularGrid(0.0, 0.1, 2**12)
->>> model = ot.ExponentialCauchy([5], [3])
+>>> model = ot.ExponentialCauchy([3.0], [5.0])
 >>> myNormalProcess = ot.SpectralNormalProcess(model, myTimeGrid)
 >>> myTimeSeries = myNormalProcess.getRealization()
 
