@@ -23,7 +23,7 @@ try:
     timeGrid = RegularGrid(0.0, 0.1, size)
 
     # Cauchy model
-    model = ExponentialCauchy(amplitude, scale)
+    model = ExponentialCauchy(scale, amplitude)
     myProcess = TemporalNormalProcess(model, timeGrid)
 
     # Create a Process sample of size N
